tap color fix, icon middle aligned

--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(51,172,175,.3);
   -webkit-tap-highlight-color: transparent;
 }
 
